@@ -131,7 +131,17 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>${javafx.maven.plugin.version}</version>
                 <configuration>
-                    <mainClass>org.example.TestFX</mainClass>
+                    <mainClass>main.TestFX</mainClass>
+                    <options>
+                        <option>--add-opens</option>
+                        <option>javafx.base/com.sun.javafx=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED</option>
+                    </options>
                 </configuration>
             </plugin>
             <plugin>
@@ -147,7 +157,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.example.TestFX</mainClass>
+                                    <mainClass>main.TestFX</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
